<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dominant_color"
    android:orientation="vertical"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <!-- Use dimension resources for margins and heights -->
    <Button
        android:id="@+id/btn_colorChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/btn_shape"
        android:elevation="@dimen/elevation"
        android:fontFamily="@font/source_code_pro_light"
        android:padding="@dimen/padding"
        android:text="Change Color"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Use dimension resources for margins and weights -->

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/result_height"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/tv_output_shape"
        android:elevation="@dimen/elevation"
        android:fontFamily="@font/source_code_pro_light"
        android:gravity="end|bottom"
        android:hint="0"
        android:padding="@dimen/padding"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ly_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_colorChange" />

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ly_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/_10sdp"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onClear"
            android:text="@string/clear_button"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnBackspace"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onBackspace"
            android:text="@string/backspace"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_25ssp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnPercentage"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onPercentageButtonClick"
            android:text="@string/percentage_button"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onOperator"
            android:text="@string/Divide"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ly_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_1">

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onOperator"
            android:text="@string/Multiply"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ly_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_2">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSubstract"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onOperator"
            android:text="@string/Subtract"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ly_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_3">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onOperator"
            android:text="@string/Plus"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_4">

        <Button
            android:id="@+id/btnSquareOfx"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onEqual"
            android:text="@string/squareOfx"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/btn_Is_Equal_To"
            android:layout_width="@dimen/_1sdp"

            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:elevation="@dimen/_1sdp"
            android:fontFamily="@font/source_code_pro_light"
            android:onClick="onEqual"
            android:text="@string/Equal"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
